force-app/main/default/objects/Developer_Event_Attendance__c/Developer_Event_Attendance__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Event Attendance</label>
    <nameField>
        <displayFormat>EVE-ATT-{0000000}</displayFormat>
        <label>Attendance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Event Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>