force-app/main/default/objects/Developer_Event_Attendance__c/fields/Attendance_Duration__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Duration__c</fullName>
    <inlineHelpText>Number of hours</inlineHelpText>
    <label>Attendance Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>