force-app/main/default/objects/Developer_Event_Attendance__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <label>Attended</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended Live</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Attended On-demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>