force-app/main/default/objects/Developer_Event_Attendance__c/fields/Developer_Event__c.field-meta.xml
<CustomField>
    <fullName>Developer_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event ID</label>
    <referenceTo>Developer_Event__c</referenceTo>
    <relationshipLabel>Developer Event Attendances</relationshipLabel>
    <relationshipName>Developer_Event_Attendances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>