force-app/main/default/objects/Developer_Event_Attendance__c/fields/Event_Attendance_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendance_ID__c</fullName>
    <description>Uniquely identifies an Event Attendance record</description>
    <externalId>true</externalId>
    <label>Event Attendance ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>