force-app/main/default/objects/Developer_Event_Attendance__c/fields/Live_Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Attendance_Date__c</fullName>
    <description>Captures the timestamp of when a developer attended an event live.</description>
    <label>Live Attendance Date</label>
    <type>Date</type>
</CustomField>