force-app/main/default/objects/Developer_Event_Attendance__c/fields/On_Demand_Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Attendance_Date__c</fullName>
    <description>Captures the timestamp of when a developer viewed/attended an event online after the date of the event.</description>
    <label>On-Demand Attendance Date</label>
    <type>Date</type>
</CustomField>