force-app/main/default/objects/Developer_Event_Attendance__c/fields/Other_Role__c.field-meta.xml
<CustomField>
    <fullName>Other_Role__c</fullName>
    <label>Other Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>