force-app/main/default/objects/Developer_Event_Attendance__c/fields/Service_Delivery_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Code__c</fullName>
    <label>Service Delivery Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>