force-app/main/default/objects/Developer_Event_Attendance__c/fields/Service_Delivery_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Name__c</fullName>
    <label>Service Delivery Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>