force-app/main/default/objects/Developer_Event_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Developer_Event__c</columns>
    <columns>Attended__c</columns>
    <columns>Registration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>